feat: Add comprehensive SEO meta tags, Open Graph, and structured data for AetherCorp
- Add professional page title and meta description
- Implement Open Graph tags for social media previews
- Add Twitter Card meta tags
- Include structured data (JSON-LD) for rich snippets
- Update manifest.json with proper branding
- Add SEO documentation and design improvement guides
- Improve mobile web app metadata

--- a/aether_corp_web/web/index.html
+++ b/aether_corp_web/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -17,20 +17,105 @@
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  
+  <!-- SEO Meta Tags -->
+  <title>AetherCorp - Elite AI, Cloud, and Data Consultancy | Enterprise Solutions</title>
+  <meta name="description" content="Transform your business with AetherCorp's elite AI, Cloud, and Data consultancy services. AWS, GCP, Azure, AI/ML, Big Data, DevOps solutions for enterprise success.">
+  <meta name="keywords" content="AI consultancy, cloud consulting, data engineering, AWS solutions, GCP services, Azure migration, machine learning, big data, DevOps, data migration, enterprise technology">
+  <meta name="author" content="AetherCorp">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.aethercorp.us">
+
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.aethercorp.us">
+  <meta property="og:title" content="AetherCorp - Elite AI, Cloud, and Data Consultancy">
+  <meta property="og:description" content="Transform your business with enterprise AI, cloud, and data solutions. Trusted by leading companies worldwide.">
+  <meta property="og:image" content="https://www.aethercorp.us/icons/Icon-512.png">
+  <meta property="og:site_name" content="AetherCorp">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.aethercorp.us">
+  <meta name="twitter:title" content="AetherCorp - Elite AI, Cloud, and Data Consultancy">
+  <meta name="twitter:description" content="Transform your business with enterprise AI, cloud, and data solutions.">
+  <meta name="twitter:image" content="https://www.aethercorp.us/icons/Icon-512.png">
+  <meta name="twitter:site" content="@AetherCorp">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="aether_corp_web">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="AetherCorp">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/Icon-512.png">
 
-  <title>aether_corp_web</title>
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#1A365D">
+
+  <!-- Manifest -->
   <link rel="manifest" href="manifest.json">
+
+  <!-- Preconnect to External Domains for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Structured Data (JSON-LD) for Rich Snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "AetherCorp",
+    "description": "Elite AI, Cloud, and Data Consultancy for Enterprise Success",
+    "url": "https://www.aethercorp.us",
+    "logo": "https://www.aethercorp.us/icons/Icon-512.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "Customer Service",
+      "email": "info@aethercorp.us"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/aethercorp",
+      "https://twitter.com/AetherCorp"
+    ],
+    "areaServed": "Worldwide",
+    "serviceType": [
+      "Cloud Consulting",
+      "AI/ML Solutions",
+      "Data Engineering",
+      "DevOps",
+      "Big Data Analytics"
+    ],
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5.0",
+      "reviewCount": "500+"
+    }
+  }
+  </script>
+
+  <!-- Organization Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "AetherCorp",
+    "url": "https://www.aethercorp.us",
+    "logo": "https://www.aethercorp.us/icons/Icon-512.png",
+    "foundingDate": "2020",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "US"
+    }
+  }
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
